# Neural-Crypto-Bot-2.0

./: .coverage  .dockerignore  .docs-config  .env  .gitignore  .markdownlint.json  .pre-commit-config.yaml  =3.4.0  Dockerfile  Makefile  README.md  activate.ps1  conftest.py  coverage.xml  docker-compose.yml  install.sh  mkdocs.yml  mkdocs.yml.bak.20250606142054  mkdocs.yml.bak.20250606142121  pyproject.toml  start_docker.ps1
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: documentation.yml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: cd.yml  ci.yml  code-quality.yml  docker-compose.test.yml  docs-check.yml  docs.yml
deployment/docker/: Dockerfile.api  Dockerfile.collector  Dockerfile.execution  Dockerfile.training
deployment/kubernetes/: api-deployment.yaml  collector-deployment.yaml  execution-deployment.yaml  monitoring-deployment.yaml  training-deployment.yaml
deployment/prometheus/: prometheus.yml
docs/: index.md
docs/01-getting-started/: README.md
docs/02-architecture/: README.md
docs/03-development/: README.md
docs/04-trading/: README.md
docs/05-machine-learning/: README.md
docs/06-integrations/: README.md
docs/07-operations/: README.md
docs/08-api-reference/: README.md
docs/09-tutorials/: README.md
docs/10-legal-compliance/: README.md
docs/11-community/: README.md
docs/12-appendices/: README.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
scripts/: check_prerequisites.sh  dev_utils.sh  setup.sh  setup_base_domain.sh  setup_configs.sh  setup_docker.sh  setup_documentation.sh  setup_poetry.sh  setup_scripts.sh  start_docker.sh  validate_phase1_fixes.py
scripts/docs/: Makefile  check_prerequisites.sh  common.sh  create_directories.sh  create_readmes.py  cross_platform_wrapper.py  fix_mkdocs.sh  init_docs.py  install_dependencies.sh  install_docs.sh  install_wrapper.sh  publish_docs.sh  setup_documentation.sh  simple_setup.py
scripts/docs/config_modules/: config_eviroments.sh  config_macros.sh  config_mkdocs_main.sh  create_configuration.sh
scripts/docs/validators/: validate_markdown.sh
src/analytics/: main.py
src/analytics/application/services/: analytics_service.py  performance_attribution_service.py
src/analytics/application/use_cases/: generate_analytics_report_use_case.py
src/analytics/domain/repository/: analytics_repository_interfaces.py
src/analytics/domain/value_objects/: performance_metric.py
src/analytics/infrastructure/: dashboard_publisher.py  data_warehouse.py
src/api/: dependencies.py  main.py  version.py
src/api/controllers/: admin_controller.py  analytics_controller.py  strategy_controller.py
src/api/controllers/V2/: __init__.py  strategy_controller_v2.py
src/api/dtos/: strategy_dto.py
src/api/middlewares/: auth_middleware.py  cache_middleware.py  logging_middleware.py  rate_limit_middleware.py  version_middleware.py
src/common/application/: base_service.py  base_use_case.py
src/common/domain/: base_agregate_root.py  base_entity.py  base_event.py  base_value_object.py
src/common/infrastructure/: event_bus.py
src/common/infrastructure/database/: base_repository.py  unit_of_work.py
src/common/infrastructure/logging/: logger.py
src/common/utils/: config.py  settings.py  time_utils.py  validation.py
src/data_collection/: main.py  main_extended.py
src/data_collection/adapters/: binance_adapter.py  bybit_adapter.py  coinbase_adapter.py  exchange_adapter_interface.py  kraken_adapter.py
src/data_collection/application/services/: data_normalization_service.py  data_validation_service.py
src/data_collection/config/: __init__.py  data_collection.yaml  database_schema.sql  settings.py
src/data_collection/domain/entities/: candle.py  funding_rate.py  liquidation.py  orderbook.py  trade.py
src/data_collection/domain/repositories/: candle_repository.py  (+3 more)
src/data_collection/infrastructure/: compression.py  crypto.py  database.py  health_check.py  kafka_producer.py  load_balancer.py  websocket_client.py
src/execution_service/: main.py
src/execution_service/algorithms/: iceberg.py  smart_routing.py  twap.py
src/execution_service/infrastructure/: exchange_client.py  execution_event_publisher.py  order_repository.py
src/feature_engineering/: __init__.py  main.py
src/feature_engineering/infrastructure/: data_processor.py  feature_store.py  kafka_consumer.py
src/model_training/: main.py
src/model_training/infrastructure/: experiment_tracker.py  model_repository.py
src/risk_management/: main.py
src/risk_management/infrastructure/: alert_notifier.py  risk_repository.py
src/risk_management/models/: drawdown_control.py  expected_shortfall.py  var_model.py
src/strategy_engine/: main.py
src/strategy_engine/infrastructure/: signal_publisher.py  strategy_repository.py
src/strategy_engine/strategies/: mean_reversion.py  reinforcement_learning.py  statistical_arbitrage.py  trend_following.py
tests/api/controllers/: test_admin_controller.py  test_analytics_controller.py  test_strategy_controller.py
tests/api/middlewares/: test_auth_middleware.py  test_logging_middleware.py
tests/common/application/: test_base_service.py  test_base_use_case.py
tests/common/domain/: test_base_entity.py  test_base_event.py  test_base_value_object.py
tests/common/infrastructure/: test_event_bus.py
tests/common/utils/: test_config.py  test_time_utils.py  test_validation.py
(+47 files in other folders)
